--- a/inst/notebook/2014-01-20-compoission-package-performance.Rmd
+++ b/inst/notebook/2014-01-20-compoission-package-performance.Rmd
@@ -16,4 +16,51 @@ and `matrixStats` package that implement the same functions, but are written in
 C.
 
 
-We can an approximately 6-fold improvement right off the bat.
+```{r}
+#library(devtools)
+#install_github('noamross/compoisson')
+#install_github('noamross/compoisson@orig-reference')
+#install_github('noamross/noamtools')
+library(compoisson)
+library(microbenchmark)
+library(dplyr)
+library(ggplot2)
+library(noamtools)
+library(scales)
+```
+
+```{r}
+fit_bench = microbenchmark(com.fit(Lemaire), compoissonOld::com.fit(Lemaire))
+
+dcom_compare = expand.grid(lambda = 1, nu = 10^c(-3:3)) %>%
+               group_by(nu) %>%
+               do({
+                 microbenchmark(dcom(0:100, .$lambda, .$nu),
+                                compoissonOld::dcom(0:100,.$lambda,.$nu))
+                 }) %>%
+                group_by(nu, expr) %>%
+                summarise(mean_time = mean(time))
+
+ggplot(dcom_compare, aes(x=nu, y=mean_time, col = expr, fill=expr)) +
+  geom_line(alpha=0.8) +
+  scale_x_log10() + scale_y_log10() + theme_nr
+
+rcom_compare = expand.grid(fn=c(dcom, rcom), pkg = c('new', 'old'), lambda = 1, nu = 10^c(-3:3)) %>%
+               group_by(nu) %>%
+               do({
+                 microbenchmark(rcom(100, .$lambda, .$nu),
+                                compoissonOld::dcom(100,.$lambda,.$nu))
+                 }) %>%
+                group_by(nu, expr) %>%
+                summarise(mean_time = mean(time)/1e6) %>%
+                group_by(nu) %>%
+                summarise(improvement = max(mean_time)/min(mean_time))
+  
+ggplot(rcom_compare, aes(x=as.factor(nu), y=mean_time, col = expr, fill=expr)) +
+  geom_point(alpha=0.8) +
+  ylab('Mean running time (seconds)') +
+  scale_x_discrete(labels=comma) +
+  scale_y_log10(breaks = exp(seq(0, log(max(rcom_compare$nu)), length.out=5)),  labels=comma) +
+  theme_nr
+```
+
