--- a/inst/2015-08-26-chapter-3-draft.Rmd
+++ b/inst/2015-08-26-chapter-3-draft.Rmd
@@ -8,18 +8,14 @@ author:
 date: "August 17, 2015"
 output:
   pdf_document:
-    dev:
-    - pdf
-    fig_caption:
-    - yes
-    fig_height:
-    - 6
-    fig_width:
-    - 11
-    keep_tex:
-    - yes
-    template:
-    - elsarticle.latex
+    dev: png
+    fig_caption: yes
+    fig_height: 6
+    fig_width: 11
+    keep_tex: yes
+    template: elsarticle.latex
+  html_document:
+    keep_md: yes
 csl: ecology-letters.csl
 address:
 - address: |
@@ -31,134 +27,195 @@ documentclass: elsarticle
 layout: review,12pt
 linenumbers: yes
 bibliography: references.bib
-abstract: ""
+abstract: In multi-infection, or macroparasite, models of disease, distributions of
+  infections among individuals are critical to host-parasite dynamics, Most analysis
+  has focused on the form and stability of equilibrium distributions.  Here I use
+  a classic macroparasite model framework, implemented as both ordinary differential
+  equations and as a stochastic individual-based model, to examine the transient dynamics
+  of such infections. The continuous form can produce underdispersed distributions
+  of infections, even in the absence of density dependence. This underdispersion is
+  weakened in the stochastic version of the model. In all cases, the Conway-Maxwell-Poisson
+  distribution [@Conway1962] better describes the evolving distribution than the widely
+  used negative binomial distribution. I also introduce an R package, **cmp**, for
+  fitting this distribution to data.
 ---
-
 
 ```{r get_chunks, echo=FALSE, message=FALSE, warning=FALSE, cache=FALSE}
 library(knitr)
 opts_knit$set(eval.after = "fig.cap")
-opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE, warning=FALSE)
+read_chunk('setup.R')
+read_chunk('ode_sims.R')
+read_chunk('micro_sims.R')
+read_chunk('micro_process.R')
+read_chunk('ode_plots.R') 
+read_chunk('micro_plots.R') 
+opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE, warning=FALSE, dpi=144)
 ```
-
-# Abstract
-
-
-In multi-infection, or  macroparasite, models of disease, distribution of
-infections among individuals are critical to host-pathogen dynamics. 
-Traditionally
-these distributions are modeled using Negative Binomial distributions.  Here
-I show that the Conway-Maxwell Poisson (CMP) distribution [@Conway1962], 
-provides a better approximation of the evolving distribution of infections in 
-classic macroparasite models. I also introduce an R package, **cmp**, for 
-fitting this distribution to data.
-
-BIG THINGS FOR OUTLINING AND WRITING TOMORROW
-
--  Underdispersion can take place in the classical model in the absence of 
-density dependence
-  -  In and near the unstable parameter space, even at the edge of the stable 
-parameter space.
-  -  
-  -  Traditionally analyze the stable parameter space [@Pugliese... proved 
-where this exists, @Kretzschmar showed this was where mean/var grew with mean]
-      -   Other space is important as transient dynamics are the norm 
-[@Hastings...], in the case of diseases driving organisms extinct locally 
-(bats, frogs) 
-  -  CMP fits the under-distributed data better, and somewhat in over-dispersed 
-data, as well.
-  -  Stochastic dynamics reduce this effect
 
 # Introduction
 
-Aggregation of parasites within hosts is a very common phenomenon [@Shaw1995].  
- So much so that it has been described as a "law" of parasite ecology 
+Aggregation of parasites within hosts is a very common phenomenon [@Shaw1995],
+so much so that it has been described as a "law" of parasite ecology 
 [@Poulin2007a]. Aggregation describes the phenomenon of a small number of hosts 
-housing larger fraction of the parasite population than would be expected by 
-change. It is characterized by the distribution of parasite loads having a 
-variation larger than its mean, or overdispersion.  This arises from 
+housing a larger fraction of the parasite population than would be expected by 
+chance. It is characterized by the distribution of parasite loads having a 
+variation larger than its mean, or overdispersion. This arises from 
 heterogeneities such as individual variation in host susceptibility and 
-exposure to parasites [@Keymar1979; @Anderson1982], and "clumping" of parasites 
-that colonize hosts together [@Pugliese1998]. Even in the absence of such 
-heterogeneities, basic host-macroparasite models exhibit variance/mean ratios 
-above one [@Adler1992].
+exposure to parasites [@Keymer1979; @Anderson1982], and "clumping" of parasites 
+that colonize hosts together [@Pugliese1998].
 
 In rare cases, parasite loads may be underdispersed, with parasites more evenly 
 distributed among hosts. Forces driving underdispersion include 
-density-dependent parasite mortality, nonlinear parasite-induced host mortality 
-[@Barbour2000]. Underdispersed parasite disributions have been found in 
-oxyuroid parasites of cockroaches [@Muller-Graf2001; Zervos1988], in which 
+density-dependent parasite mortality and nonlinear parasite-induced host
+mortality [@Barbour2000]. Underdispersed parasite distributions have been found
+in oxyuroid parasites of cockroaches [@MullerGraf2001; @Zervos1988], in which 
 sexual competition appears to induce density dependence. There are also a 
 variety of examples in fish populations: @Burn1980 found nearly all Deretrema 
 parasites in flashlight fish (*Anomalops katopteron*) were in groups of 2. In 
-many cases, parasite numbers greater than one are rare [@Donnelly1994; 
-Adlard1994; @Kennedy1979]. Often, this density dependence is driven by limited 
-space in the host [@Uebelacker1978].
+other cases, parasite numbers greater than one are rare [@Donnelly1994; 
+@Adlard1994; @Kennedy1979]. Often, this density dependence is driven by limited 
+space in the host [@Uebelacker1978]. The rarity of underdispersal suggests that
+the influence of density-dependence is less than than that of individual
+variation in most populations, despite the fact that density-dependence does
+occur in many parasite populations [@Poulin2007].
 
+Most models of host-macroparasite dynamics are variants of that of @Anderson1978, who used
+an infinite-dimensional system of ordinary differential equations (ODE) to
+represent a host population partitioned into indefinite number of classes
+according to their parasite load. The infinite-dimensional system was reduced
+to a two-dimensional system by assuming parasites were distributed by fixed
+Poisson or negative-binomial distributions. Later, it was shown that these
+models are equivalent in terms of stability [@Kretzschmar1993a], though the
+exact form of the equilibrium distribution varies some from the
+negative-binomial [@Barbour2000]. @Kretzschmar1993b showed that the
+variance-mean ratio is important to system stability; it must increase with the
+mean for there to be an internal host-parasite equilibrium. This suggests why
+under-dispersed populations are rare - they lead to extinction of the parasite
+population.
 
-In parasite populations in hosts are most frequently modelled using the 
-negative binomial distribution.  It has performed very well for field data 
-[@Pacala1998]. 
+These analyses have focused on the equilibrium behavior of host-parasite models.
+Even the absence of density dependence or individual variation, though
+distributions of macroparasites evolve over time [@Adler1992]. The transient
+dynamics of host-parasite populations are of interest in understanding and
+managing emerging diseases, outbreaks, and cases of potential extinction.
+Spore-driven fungal diseases, such chytrid fungus, sudden oak death,
+and white nose syndrome, meet these criteria.  These emerging disease are 
+capable of causing local extinctions in host populations [@Briggs2010;
+@Fisher2012; @James2015; @Langwig2015]. While not traditionally considered
+macroparasites, the dynamics of these diseases are similar; disease loads in
+hosts are driven by repeated infections rather than internal reproduction,
+and host mortality is load-dependent [@Briggs2010; @Langwig2015].
 
-The negative binomial distribution has been used to represent overdisperson in
-the @anderson1978 model.  It has proven an excellent empirical distribution in
-the field [@Pacala1998].  It represents over-dispersed populations well.
+Here I examine the dynamics the distribution of parasites among hosts in the
+classic infinite-dimensional model during the emergence of a disease that
+suppresses or host populations. I compare these dynamics to an equivalent
+discrete, stochastic, individual-based model. For both, I examine the relative
+utility of the negative binomial and the Conway-Maxwell-Poisson distributions
+in describing these distributions as they change over the course of an epidemic.
 
-@Anderson1978's classic macroparasite reduced an infinite-dimensional system of 
-equations to a tractable system of two equations by making the assumption that 
-parasite distributions were constant and conformed to negative binomial 
-distributions.  @Kretzschmar1993a showed that, at equilibrium, such reduced 
-models are equivalent in terms of stability, even if the exact form of 
-equilibrium distributions varies some from the negative-binomial.  However, the 
-distribution of infections in the infinite system changes over time, as does 
-its variance/mean ratio [@Adler1992], and thus the distribution.
+# Methods
 
-@Kretzschmar1993b showed that the variance-mean ratio was important to system 
-stability; it must increase with the mean for there to be host-parasite 
-equilibrium.  This suggests why under-dispersed populations are rare - they 
-lead to extinction of these populations.
+## Models
 
-@Anderson1978 suggest the binomial distribution to represent these 
-underdisperesed
-populations.  However, this has the drawback of an absolute maximum number of 
-infections, above which the probability is zero. In addition, there are
-practical problems a discrete parameters that preclude many numeric solvers.
+I use two versions of a model closely related to the macroparasite model
+introduced by @Anderson1978 and examined in much
+of the subsequent literature [@Adler1992; @Kretzschmar1993a; @Kretzschmar1993b;
+@Barbour2000]. The primary difference is the separation of birth
+and death processes, with host density dependence only applying to the birth
+process. In the model, the host population $N$ is subdivided into classes with 
+infection level $i$, where $i$ is discrete and ranges from 1 to $\infty$.  New, uninfected hosts recruit into the population at a density-dependent rate
+$r (1 - \sum N_i / K)$. Hosts gain infections at rate $\Lambda$,
+which is the sum of total infections among all hosts $(\sum i N_i)$ times a
+contact rate $\lambda$. Hosts recover from infections at a per-infection rate
+$\mu$, and die at a background rate $d$ plus a per-infection rate $\alpha i^p$,
+where the power term $p$ represents non-linearity in mortality. The full model
+is described by:
 
+$$\begin{aligned}
+  N_0 &= r \sum_{i = 0}^\infty N_i \left(1 - \frac{\sum_{i = 0}^\infty 
+N_i}{K}\right) - (d + \Lambda) N_0 \\
+  N_i &= \Lambda N_{i-1} - \Lambda N_i - \alpha i^p - \mu i N_i + \mu (i + 1) 
+N_{i+1} \\
+  \Lambda &= \lambda \sum_{i = 1}^\infty i N_i
+\end{aligned}$$
 
+`r options(scipen = 1, digits = 2)`
 
+For purposes of simulation, I truncate the number of infection classes at
+$i=100$. For all parameterizations shown here, the value of $N_{100}$ never
+differed from zero within machine tolerance (approximately $`r .Machine$double.eps`$).
 
-Fungal diseases can be similar to macroparasites in that they are load-dependent
-[@Briggs2010; Langwig2015].  They are capable of causing local extinctions in 
-host
-populations [@Fisher2012].
+The second version is the equivalent individual-based model (IBM), which includes demographic 
+stochasticity.  In the IBM, the host population is represented as a discrete set of individuals, each with a
+discrete number of infections. Stochastic rate equations determine the rate at which
+each individual $j$ with infections $i$ may reproduce, die, acquire a new infection,  or recover from infections. The rates
+$r$ are governed by the same parameters as in the ODE model above. The full set
+of rate equations are:
 
-It is theorized that one reason underdispersal is rare because system stability 
-depends on overdispersal [@Adler1992, @Kretzschamr1993a]. The stable 
-distributions
-of standard host-parasite models, even in the absence of individual variation,
-are over-dispersed.
+$$\begin{aligned}
+r_{j, \, birth} &= \max \left\{ r(1-N/K), \, 0 \right\} \\
+r_{j, \, death} &= \alpha i_j^p + d \\
+r_{j, \, infection} &= \Lambda \\
+r_{j, \, recovery} &= \mu i_j \\
+\Lambda = \lambda \sum_{j = 1}^N i_j \\
+\end{aligned}$$
 
+Individual states are updated in continuous time, using Gillespie's [-@Gillespie1976] stochastic simulation algorithm (SSA).
 
-Characterize how the distributions of infections in a host population vary 
-under the transient dynamics of an epidemic, as simulated using an 
-individual-based model
--  Show how these distributions differ from Poisson or Negative-Binomial 
-assumptions in classic multi-infection models over time
--  Demonstrate how a Conway-Maxwell-Poisson distribution proves a better 
-characterization of the distributions generated from the IBM.
--  Show the same for an empirical counts of canker infection on oaks from 
-Meentemeyer et al.’s 2012 Sonoma data set.
-Demonstrate and document an R package for fitting such distributions.
+```{r loadpkgs, cache=FALSE, message=FALSE}
+```
 
+```{r setparms, cache=FALSE}
+```
 
+Table 1 shows the model parameters used in all cases in this paper.
 
+| Parameter | Symbol | Value |
+|-----------|--------|-------|
+| birth rate | $r$  | `r paste(signif(r_vals, 1), collapse = ", ")` |
+| carrying capacity | $K$ | `r format(baseparms$K)` |
+| intrinsic host mortality rate | $d$ | `r format(baseparms$d)` |
+| intrinsic parasite mortality rate | $\mu$ | `r format(baseparms$mu)` |
+| additional host mortality per infection | $\alpha$ | `r format(baseparms$alpha)` |
+| power of host mortality per infection | $p$ | `r paste(signif(alpha_power_vals, 1), collapse = ", ")` |
+| contact rate | $\lambda$ | `r format(baseparms$lambda, scientific = FALSE)` |
+| initial host population | $N_0$ | `r format(baseparms$N0)` |
+| initial parasite population | $P_0$ | `r format(baseparms$P0)` |
+| time period | $T$ | `r format(baseparms$time_max)` |
 
+  Table 1: Parameters for the host-parasite models
+
+I examine transient dynamics by simulation across a range of growth rates $r$
+and with both linear $(p = 1)$ and nonlinear $(p = 2)$ parasite-induced mortality.
+The parameters, shown in Table 1, all represent conditions under which the
+parasite can invade the host population and the ODE system reaches an equilibrium
+with a suppressed host population.
+
+The ODE simulations were performed in R [@RCORE], using the deSolve
+package [@deSolve]. The IBM simulations were performed using a custom package [TODO].
+Code to reproduce the simulations is available at TODO.
 
 ## The Conway-Maxwell-Poisson distribution
 
-The Conway-Maxwell Poisson (CMP) [@Conway1962; @Shmueli2005; @Lynch2014] 
-distibution is a distribution that can be used to model discrete count data.  
-It has the form:
+The negative binomial distribution has traditionally been used as a model for
+macroparasite distributions. It has proven an excellent empirical model in
+the field [@Pacala1988].  Intuitively, the negative binomial is a mechanistic
+sense; it be derived from a continuous mixture of Poisson
+distributions with varying means. Thus, it represents a macroparasite
+populations colonizing hosts with varying traits or conditions, resulting
+in different colonization rates.
+
+However, the negative binomial has a minimum variance/mean ratio of one; it can
+not represent underdispersed populations. @Anderson1978 suggested the binomial
+distribution to represent these underdispersed populations. This has
+the drawback of an absolute maximum number of infections, above which the
+probability is zero. In addition, it has the opposite problem of the negative binomial; it can only
+represent under-dispersed populations.  Using the negative and positive binomial distributions
+means switching between mechanistically different representations of a population.
+
+I compare the fit of the macroparasite distributions generated by the models
+above to both the negative binomial and the Conway-Maxwell Poisson (CMP)
+distribution [@Conway1962; @Shmueli2005].  The CMP distribution has the form:
 
 $$P(X = x) = \frac{\lambda^x}{(x!)^\nu} \frac{1}{Z(\lambda, \nu)}$$
 
@@ -171,127 +228,168 @@ Poisson
 distribution, the $\nu$ term modifies it. When $\nu < 1$, the distribution is 
 overdispersed; it has a fatter tail in a Poisson, and its variance is greater 
 than its mean. When $\nu > 1$, the distribution is underdispersed. Its tail is 
-thinned, and its variance is less than its mean.  If $\nu = 1$, the CMP 
-distribution is a Poisson distribution.  If $\nu = \infty$, the CMP distribution
+thinned, and its variance is less than its mean. If $\nu = 1$, the CMP 
+distribution is a Poisson distribution. If $\nu = \infty$, the CMP distribution
 is the same as a Bernoulli distribution.
 
 The CMP distribution intuitively describes the processes that generate parasite 
 distributions. A Poisson process represents the accumulation of parasites, 
-while the censorship of the tail, driven by the $\nu$ term, represents the 
-density-dependent processes that operate most strongly in hosts with high 
-parasite loads. 
+while the censorship or extension of the tail, driven by the $\nu$ term,
+represents differential accumulation or mortality of parasites according to
+host infection number.  
 
-
-
-## The `cmp` package
-
-CMP distributions, along with functions are implemented in the `cmp` package 
-[@Ross2015c, dx.doi...TODO].
-
--   Fit via max likelihood, KLD
--   Standard functions
--   High-speed and quiality implementation, using approximations where 
-approriate, defining error bounds.
-
-The `cmp` package contains density, probability, quantile, and random number 
-functions
-for the CMP distribution, as as well as fitting these distributions to data via
-maximum likelihood and Kullback–Leibler divergence.
-
-# Models
-
-
-
-Two versions of the model:
-
-I use two versions of a model closely derived from @Anderson1978.  This first, 
-determistic, continuous version, consists of an infinite-dimensional system of 
-ODEs representing the population in classes of infection level.  The second is 
-its equivalent individual-based model, which includes demographic 
-stochasticity.  The IBM consists of a set of rate equations which are solved 
-via Gillespies [-@Gillespie1978] stochastic simulation algorithm (SSA).  
-
-An infinite-dimensional model
-
-$$\begin{aligned}
-  N_0 &= r \sum_{i = 0}^\infty N_i \left(1 - \frac{\sum_{i = 0}^\infty 
-N_i}{K}\right) - (d + \Lambda) N_0 \\
-  N_i &= Lambda N_{i-1} - Lambda N_i - \alpha i^p - mu i N_i + mu (i + 1) 
-N_{i+1} \\
-  \Lambda = \lambda_ex + \lambda \sum_{i = 1}^\infty i N_i \\
-$$
-
-
-In the individual-based model, the host population is reprented as  a discrete 
-set of individuals, each with a discrete number of infections. Births, deaths, 
-new infections and loss of infections (recovery) in each individual $j$ with 
-infections $i_j$
-
-$$\begin{aligned}
-r_{j, \, birth} &= \max \left\{ r(1-N/K), \, 0 \right\} \\
-r_{j, \, death} &= \alpha j_i + d \\
-r_{j, \, infection} &= \Lambda \\
-r_{j, \, recovery} &= \mu j_i
-\Lambda = \lambda_ex + \lambda \sum_{j = 1}^N i_j \\
-\end{aligned}$$
-
-The rates $\alpha, \my, \lambda, \lambda_ex, K$ and $d$ represent the same rates
-as in the ODE model. 
-
-| Parameter | Symbol | Value |
-|-----------|--------|-------|
-| birth rate | $r$  | `r format(parms$r)` |
-| carrying capacity | K | `r format(parms$K)` |
-| intrinsic host mortality rate | $d$ | `r format(parms$d)` |
-| intrinsic pathogen mortality rate | $\mu$ | `r format(parms$mu)` |
-| additional mortality per infection | $\alpha$ | `r format(parms$alpha)` |
-| nonlinear component of additional mortality per infection | $p$ | `r 
-format(parms$alpha_power)` |
-| contact rate | $\lambda$ | `r format(parms$lambda)` |
-| external spore arrival rate | $\lambda_{ex}$ | `r format(parms$lambda_ex)` |
-| initial host population | $N_0$ | `r format(macro_state[1])` |
-| initial pathogen population | $P_0$ | `r format(macro_state[2])` |
-| time period | $T$ | `r format(parms$time_max)` |
-
-  Table: Parameters for the host-pathogen models and management problem
-
+Since the $Z$ term is defined by an infinite series, the CMP density function can
+be computationally expensive to calculate. I provide an R package, **cmp**, [REF:TODO]
+which contains density, probability, quantile, and random number functions
+for the CMP distribution.  It also has functions for fitting this distribution
+to data via maximum likelihood or minimum Kullback–Leibler divergence. **cmp** implements the distribution functions using high-performance, parallel C++ code.  It calculates
+$Z$ to user-adjustable accuracy, and uses approximations for $Z$ in the areas of
+parameter space where they are appropriate [@Shmueli2005], so as to maximize
+efficiency.  It also has a C++ API for incorporation into other high-performance
+packages. While there have been previous implementations of CMP, they have
+not had the combination of accuracy and performance needed for many uses.
 
 # Results
 
-
-Figure 1 shows the host-parasite dynamics of the system with linear pathogen
-mortality.  It shows the relative KLD values for the negative binomial and CMP
-distributions with respect to a baseline Poisson distribution.  
-
-For the nonlinear case (Figure 3), the variance/mean ratio remains below one 
-for the entire
-period.  In this case, the CMP distribution outperforms the negative binomial 
-and
-Poisson distributions over the whole period.  The variance/mean ratio of the 
-distribution has a minimum
-at the peak of the epidemic.  This corresponds to the peak advantage for the 
-CMP distribution.
-
-Mean dynamics differ in the stochastic version of the model, with greater host 
-and
-parasite populations than the deterministic model.  The reason for this can be
-seen in Figure X, which compares the evolution of distributions over time.  In
-the deterministic model, the tail of the distribution extends far beyond that of
-the stochastic averages, because it can contain populations below one.  With 
-nonlinear
-mortality, this tail can drive a greater portion of the dynamics.
-
-Hence in the stochastic case, the CMP distributon provides a better fit over a 
-larger
-course of the simulation.
-
-
-
-
-
-```{r fig1}
+```{r odesims, cache=TRUE, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
 ```
 
-```{r fig2}
+```{r odeprocess, cache=TRUE, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
 ```
 
+```{r microsims, cache=TRUE, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
+```
+
+```{r microprocess, cache=TRUE, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
+```
+
+Where hosts have low growth rates, parasites invade the host population and go through a period
+of high growth, then decline as they and suppress the
+host population to very low levels (Figure 1). In the ODE system in the linear case ($p=1$)
+the parasite population is underdispersed for an extended transient period.
+The variance/mean ratio declines below one, reaching its nadir as the parasite
+population declines from its peak and the host population reaches its low values.
+The variance/mean ratio eventually equilibriates near one.  At moderate growth
+rates, the host population goes through extended dampening cycles before reaching
+equilibrium, with repeated parasite population spikes (only one cycle is shown in figures).
+In this case, the population passes from underdispersion to overdispersion;
+the variance/mean ratio declines modestly below one, then increases
+above one in each cycle before reaching equilibrium.  When the hosts have high
+growth rates, the dampened cycles are faster and both host and parasite populations
+settle at higher values.  In this case, the parasite populations become overdispersed
+with the rise in parasite populations and remain overdispersed at equilibrium.
+
+```{r f1, cache=FALSE, fig.cap="Dynamics of a parasite epidemic in the linear ODE model, across different host growth rates $r$. Top (blue): total host population $(N)$, over time.  Middle (red): total parasite population $(P)$ over time. Bottom (green): variance/mean ratio of the distribution of parasites among hosts. Host growth rates vary by column: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig1>>
+Figure1
+```
+
+The distributions generated by the ODE model are better approximated by the CMP
+distribution than the negative binomial at all growth rates.  Figure 2 shows
+the relative fit of the two distributions via Kullback–Leibler divergence (KLD). Positive
+values indicate a better fit to the CMP than negative binomial. As KLD is log-scale
+the y-axis represents the equivalent of a likelihood ratio. In periods of
+neither over- nor underdispersion, both distributions fit equally. At all other
+times the distributions generated by the ODE model are better approximated
+by the CMP distribution.
+
+```{r f2, cache=FALSE, fig.cap="Relative fit of distributions produced by the linear ODE model to negative binomial and CMP distributions.  Positive values indicate better fits for CMP. Host growth rates vary: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig2>>
+Figure2
+```
+
+Figures 3 and 4 show the system dynamics for the case of $p=2$, or nonlinear
+parasite-induced host mortality.  Overall dynamics in this case are similar for
+all host growth rates.  However, in this case, underdispersion occurs in at all
+growth rates, with weak underdispersion at equilibrium at the highest growth rate.
+As would be expected, the CMP distribution describes the distribution of parasites
+much better at all growth rates, with the greatest advantage being at low growth
+rates, where underdispersion is greatest.
+
+
+```{r f3, cache=FALSE, fig.cap="Dynamics of a parasite epidemic in the nonlinear ODE model, across different host growth rates $r$. Top (blue): total host population $(N)$, over time.  Middle (red): total parasite population $(P)$ over time. Bottom (green): variance/mean ratio of the distribution of parasites among hosts.  Host growth rates vary by column: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig3>>
+Figure3
+```
+
+```{r f4, cache=FALSE, fig.cap="Relative fit of distributions produced by the nonlinear ODE model to negative binomial and CMP distributions.  Positive values indicate better fits for CMP. Host growth rates vary: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig4>>
+Figure4
+```
+
+
+Figure 5 shows mean dynamics of 100 IBM runs as well as a sampling of individual runs for the linear case. The dynamics of the discrete, stochastic IBM vary in minor ways from the deterministic ODE.  In general, mean host populations
+remain higher, and parasite populations are greater at both the peak of the
+epidemic and equilibrium. However, the variance/mean ratio does not decline below zero in the IBM in any
+of the cases with linear host mortality.  Where the ODE system generates underdispersion,
+the IBM is randomly dispersed (variance/mean ratio $\approx$ 1).  Where the ODE generates overdispersion, the IBM
+generates stronger overdispersion. This is also reflected in the relative fits of the
+distributions (Figure 6). The randomly-dispersed IBM is fit nearly equally well by the CMP and
+negatively binomial distributions, while the overdispersed counts are fit better
+by the CMP.
+
+```{r f5, cache=FALSE, fig.cap="Dynamics of a parasite epidemic in the linear IBM, across different host growth rates $r$. Mean values of 100 runs shown, with individual runs shown in purple. Top (blue): total host population $(N)$, over time.  Middle (red): total parasite population $(P)$ over time. Bottom (green): variance/mean ratio of the distribution of parasites among hosts.  Orange lines show dynamics of the linear ODE for comparison.  Host growth rates vary by column: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig5>>
+Figure5
+```
+
+```{r f6, cache=FALSE, fig.cap="Relative fit of distributions produced by the linear IBM model to negative binomial and CMP distributions. Mean value of 100 runs shown, with individual runs shown in purple.  Relative fits for the linear ODE model shown in orange for comparison.  Positive values indicate better fits for CMP. Host growth rates vary: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig6>>
+Figure6
+```
+
+In the case of nonlinear mortality, the IBM behavior once again largely reflects
+that of the ODE (Figure 7).  In this case, however, the underdispersal
+in the ODE model is still present, albeit weaker.  The CMP distribution is a
+substantially better fit in all cases, though not as strongly as in the ODE case.
+
+```{r f7, cache=FALSE, fig.cap="Dynamics of a parasite epidemic in the nonlinear IBM, across different host growth rates $r$. Mean values of 100 runs shown, with individual runs shown in purple. Top (blue): total host population $(N)$, over time.  Middle (red): total parasite population $(P)$ over time. Bottom (green): variance/mean ratio of the distribution of parasites among hosts.  Orange lines show dynamics of the nonlinear ODE for comparison.  Host growth rates vary by column: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig7>>
+Figure7
+```
+
+```{r f8, cache=FALSE, fig.cap="Relative fit of distributions produced by the linear IBM model to negative binomial and CMP distributions. Mean value of 100 runs shown, with individual runs shown in purple.  Relative fits for the linear ODE model shown in orange for comparison.  Positive values indicate better fits for CMP. Host growth rates vary: $r = 0.001$ (left), $r = 0.05$ (middle), $r = 0.2$ (right)."}
+<<fig8>>
+Figure8
+```
+
+# Discussion
+
+Underdispersion can occur in classic host-parasite models even in the absence of 
+parasite density dependence, though density dependence strengthens this 
+effect. It occurs during transient dynamics as parasite population growth drives host
+populations down when the time scale of population growth is much slower than
+the rate of growth of the parasite. This is a time-delay effect; as high-infection
+hosts die from infection, the slow growth of new hosts and their progression
+to higher infection levels takes time to rebound,
+leading to an overall thinner tail of the distribution during this transient. In the
+cases of density-dependent mortality, this underdispersal is enhanced.
+
+This underdispersal effect is weakened or eliminated in discrete IBM models as compared to
+ODE models with the same parameterization.  In the IBM, the long tail is truncated, as no values below one are present, while in the ODE the tail may extend much further with below-one values.  This would
+intuitively make the distribution more underdispersed.
+However, the truncation of the tail also eliminates the outsize effect of these
+sub-1 groups from the system, resulting in less overall mortality, weakening
+the forces that drive underdispersal.
+
+These models produce distributions more closely matched by the CMP distribution
+than the negative binomial in all cases where parasites are non-randomly
+distributed.  While this is obvious that would occur for underdispersed
+populations, it is somewhat surprising that it did for overdispersed populations.
+This highlights the fact that the mechanism producing overdispersal in these
+models is different from that commonly-attributed case of variation in host
+vulnerability.  Rather, both under- and overdispersal arise from forces of load-
+dependent colonization and mortality.  In real systems, parasite distribution
+may be driven by a combination of these forces and host variation. Thus,
+mixed models, comprised of CMP distributions with varying $\lambda$ terms,
+may be appropriate for describing populations when there is sufficient data
+and reason to examine multiple forces shaping host-parasite dynamics.
+
+The CMP distribution may be appropriate to other applications in ecology.
+Thus far, its use has been limited to a few test cases [@Ridout2004, (clutch size); @Lynch2014 (litter sizes, plant densities, and species richness)]. Mechanistically, CMP is an appropriate
+fit for data generated by density-dependent processes or where high counts are
+censored. The **cmp** package can be used with other R packages such as **rethinking**
+[@rethinking] and **nimble** [@nimble] to build general linear models
+and mixed models with the CMP distribution.
+
+# References
